Fixed the nav component getting squished for smaller screens, made the article images smaller and the width of the paragraph. Also lowered the constrains to register.

--- a/src/api/FetchSinglePost.module.css
+++ b/src/api/FetchSinglePost.module.css
@@ -42,6 +42,7 @@
 
 .articleAuthorInformation h2 {
   margin-bottom: var(--article-author-information-margin-bottom);
+  font-size: var(--article-information-header-font-size);
   text-align: center;
 }
 
@@ -133,4 +134,27 @@
 
 .deleteCommentContainer:hover {
   cursor: pointer;
+}
+
+.articleDetailedInformation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.articleDetailedInformation p {
+  width: var(--article-detailed-information-paragraph-width);
+}
+
+@media screen and (max-width: 600px) {
+  .articleDetailedInformation p {
+    width: var(--article-detailed-information-paragraph-full-width);
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .articleDetailedInformation p {
+    width: var(--article-detailed-information-paragraph-full-width);
+  }
 }
